language/move-lang/tests/move_check/typing/type_variable_join_single_unpack_assign_invalid.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/typing/type_variable_join_single_unpack_assign_invalid.move:13:14
   │
12 │         (f1: u64);
   │              --- Given: 'u64'
13 │         (f2: bool);
   │              ^^^^
   │              │
   │              Invalid type annotation
   │              Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/type_variable_join_single_unpack_assign_invalid.move:18:14
   │
17 │         (f1: Box<u64>);
   │                  --- Given: 'u64'
18 │         (f2: Box<bool>);
   │              ^^^^^^^^^
   │              │   │
   │              │   Expected: 'bool'
   │              Invalid type annotation

